@@ -435,7 +435,6 @@ wint_t my_getwc(FILE * s)
 	char i[MAX_ENC_BYTES];
 	int byte = 0;
 	int convert;
-	int x;
 	wchar_t rval;
 	while (1) {
 		i[byte] = getc(s);
@@ -446,7 +445,6 @@ wint_t my_getwc(FILE * s)
 		errno = 0;
 		mbtowc(NULL, NULL, 0);
 		convert = mbtowc(&rval, i, byte);
-		x = errno;
 		if (convert > 0) {
 			/* legal conversion */
 			return rval;
@@ -821,8 +819,8 @@ int main(int argc, char *argv[])
 	char **command_argv;
 	int command_length = 0;	/* not including final \0 */
 	watch_usec_t last_run = 0;
-	watch_usec_t next_loop;	/* next loop time in us, used for precise time
-				 * keeping only */
+	watch_usec_t next_loop = 0;	/* next loop time in us, used for precise time
+	                           	 * keeping only */
 #ifdef WITH_WATCH8BIT
 	wchar_t *wcommand = NULL;
 	int wcommand_characters = 0;	/* not including final \0 */
