@@ -3,6 +3,7 @@ procps-ng-NEXT
   * library (API & ABI unchanged)
     tolerates all potential 'cpuinfo' formats              issue #272
     restore the proper main thread tics valuations         issue #280
+    Remove myself from proc count                          merge #193
   * free: -L one line output                               issue #156
   * pgrep: Use only --signal option for signal             Debian #1031765
   * pgrep: suppress >15 warning if using regex             Debian #1037450
@@ -14,6 +15,7 @@ procps-ng-NEXT
   * top: includes VM (guest) tics with '!' toggle          merge #179
   * top: lessen summary cpu distortions on first display   merge #180
   * top: better backspace handling wtth line edits         issue #278
+  * vmstat: Print guest time in non-wide mode
   * w: Fix musl UT_HOSTSIZE issue
 
 procps-ng-4.0.3
